--- a/x-wing/src/index.html
+++ b/x-wing/src/index.html
@@ -1,36 +1,199 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>X-Wing Chat</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <style>
+        :root {
+            --bg: #1e1e1e;
+            --text: #ffffff;
+            --accent: #10a37f;
+            --bubble: #2c2c2c;
+            --border: #3c3c3c;
+            --hover: #333;
+            --scrollbar-thumb: #555;
+            --recording-color: #e74c3c;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--bg);
+            color: var(--text);
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            width: 100vw;
+        }
+
+        .top-bar {
+            display: flex;
+            justify-content: flex-end;
+            gap: 8px;
+            padding: 10px;
+            background-color: var(--bubble);
+            border-bottom: 1px solid var(--border);
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            -webkit-app-region: drag;
+        }
+
+        .top-bar button {
+            background: transparent;
+            border: none;
+            color: var(--text);
+            padding: 8px;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: background 0.2s;
+            -webkit-app-region: no-drag;
+        }
+
+        .top-bar button:hover {
+            background: var(--hover);
+        }
+
+        #btn-stop.recording {
+            color: var(--recording-color);
+        }
+
+        .header {
+            padding: 12px 20px 8px;
+            border-bottom: 1px solid var(--border);
+        }
+
+        h4 {
+            margin: 0;
+            font-size: 16px;
+            color: #a0a0a0;
+        }
+
+        .progress-bar {
+            height: 4px;
+            background: #1a1a1a;
+            border-radius: 4px;
+            overflow: hidden;
+            display: none;
+        }
+
+        .progress-fill {
+            height: 100%;
+            width: 100%;
+            background: var(--accent);
+        }
+
+        .progress-fill.moving {
+            animation: progressMove 2s linear infinite;
+        }
+
+        @keyframes progressMove {
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
+        }
+
+        .chat-container {
+            flex: 1;
+            overflow-y: auto;
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .chat-container::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .chat-container::-webkit-scrollbar-thumb {
+            background-color: var(--scrollbar-thumb);
+            border-radius: 4px;
+        }
+
+        .message-bubble {
+            background: var(--bubble);
+            padding: 12px 16px;
+            border-radius: 8px;
+            max-width: 85%;
+            line-height: 1.6;
+            word-wrap: break-word;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            color: var(--text);
+        }
+
+        .input-container {
+            display: flex;
+            padding: 16px;
+            gap: 10px;
+            border-top: 1px solid var(--border);
+            background: var(--bg);
+        }
+
+        .input-container textarea {
+            flex: 1;
+            resize: none;
+            background: var(--bubble);
+            border: 1px solid var(--border);
+            border-radius: 6px;
+            padding: 10px 14px;
+            color: var(--text);
+            font-size: 14px;
+            font-family: inherit;
+            height: 44px;
+        }
+
+        .input-container button {
+            background: var(--accent);
+            border: none;
+            padding: 10px;
+            border-radius: 6px;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .input-container button:hover {
+            background: #0e8c6c;
+        }
+    </style>
+</head>
 <body>
 <div class="container">
     <div class="top-bar">
         <button id="btn-print" title="Take Screenshot">
             <span class="material-icons">photo_camera</span>
         </button>
-
         <button id="btn-clear-input" title="Clear Input">
             <span class="material-icons">backspace</span>
         </button>
-
         <button id="btn-record" title="Start Recording">
             <span class="material-icons">fiber_manual_record</span>
         </button>
-
         <button id="btn-stop" title="Stop Recording">
             <span class="material-icons">stop</span>
         </button>
-
         <button id="btn-clear" title="Clear Messages">
             <span class="material-icons">delete_sweep</span>
         </button>
-
         <button id="btn-close" title="Close App">
             <span class="material-icons">close</span>
         </button>
-
     </div>
 
     <div class="header">
         <h4>Received Messages:</h4>
-        <div class="progress-bar" id="progressBar" style="display: none;">
+        <div class="progress-bar" id="progressBar">
             <div class="progress-fill"></div>
         </div>
     </div>
@@ -40,8 +203,8 @@
     <div class="input-container">
         <textarea id="userInput" placeholder="Type a message..." rows="1"></textarea>
         <button id="btn-send" title="Send">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="22" y1="2" x2="11" y2="13"></line>
                 <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
             </svg>
@@ -49,19 +212,19 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
     const progressBar = document.getElementById('progressBar');
     const fill = progressBar.querySelector('.progress-fill');
+    const btnRecord = document.getElementById('btn-record');
+    const btnStop = document.getElementById('btn-stop');
 
     const startProgress = () => {
         progressBar.style.display = 'block';
-        fill.style.width = '0%';
-        setTimeout(() => fill.style.width = '100%', 100);
+        fill.classList.add('moving');
     };
 
     const stopProgress = () => {
-        fill.style.width = '100%';
+        fill.classList.remove('moving');
         setTimeout(() => progressBar.style.display = 'none', 500);
     };
 
@@ -73,14 +236,18 @@
         document.getElementById('messages').innerHTML = '';
     });
 
-    document.getElementById('btn-record').addEventListener('click', () => {
+    btnRecord.addEventListener('click', () => {
         startProgress();
+        btnRecord.disabled = true;
+        btnStop.classList.add('recording');
         window.electronAPI.startRecording();
     });
 
-    document.getElementById('btn-stop').addEventListener('click', () => {
+    btnStop.addEventListener('click', () => {
         window.electronAPI.stopRecording();
         stopProgress();
+        btnRecord.disabled = false;
+        btnStop.classList.remove('recording');
     });
 
     document.getElementById('btn-clear-input').addEventListener('click', () => {
@@ -102,14 +269,13 @@
     window.electronAPI.onNewMessage((mensagem) => {
         const container = document.getElementById('messages');
         const el = document.createElement('div');
-        el.classList.add('message-bubble', 'fade-in');
+        el.classList.add('message-bubble');
         el.innerHTML = marked.parse(mensagem);
         container.appendChild(el);
         container.scrollTop = container.scrollHeight;
     });
 
     let lastCopiedText = '';
-
     async function monitorClipboard() {
         try {
             const text = await navigator?.clipboard?.readText();
@@ -120,184 +286,10 @@
                 input.focus();
             }
         } catch (err) {
-            console.error('❌ Clipboard error:', err);
+            console.error('Clipboard error:', err);
         }
     }
-
     setInterval(monitorClipboard, 1000);
 </script>
-
-<style>
-    :root {
-        --bg: #0d0d0d;
-        --text: #e5e5e5;
-        --accent: #10a37f;
-        --bubble: #1f1f1f;
-        --border: #2e2e2e;
-        --hover: #262626;
-        --scrollbar-thumb: #444;
-    }
-
-    body {
-        margin: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: var(--bg);
-        color: var(--text);
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .container {
-        display: flex;
-        flex-direction: column;
-        height: 80vh;
-        width: 100vw;
-        background-color: var(--bg);
-        padding-top: 60px;
-    }
-
-    .top-bar {
-        display: flex;
-        justify-content: flex-end;
-        padding: .2rem;
-        background: var(--bg);
-        position: fixed;
-        width: 100%;
-        top: 0;
-        z-index: 10;
-        border-bottom: 1px solid var(--border);
-        -webkit-app-region: drag;
-
-    }
-
-    .top-bar button {
-        background: var(--bubble);
-        border: none;
-        color: var(--text);
-        padding: .4rem;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: background 0.2s, transform 0.2s;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        -webkit-app-region: no-drag;
-
-    }
-
-    .top-bar button:hover {
-        background: var(--hover);
-        transform: scale(1.05);
-
-    }
-
-    .header {
-        padding: 10px 20px;
-        border-bottom: 1px solid var(--border);
-    }
-
-    h4 {
-        margin: 0;
-        font-weight: 400;
-        font-size: 18px;
-    }
-
-    .progress-bar {
-        height: 4px;
-        background: #1a1a1a;
-        border-radius: 4px;
-        overflow: hidden;
-        margin-top: 10px;
-    }
-
-    .progress-fill {
-        height: 100%;
-        width: 0%;
-        background: var(--accent);
-        transition: width 3s ease;
-    }
-
-    .chat-container {
-        flex: 1;
-        overflow-y: auto;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        border-top: 1px solid var(--border);
-        border-bottom: 1px solid var(--border);
-    }
-
-    .chat-container::-webkit-scrollbar {
-        width: 10px;
-    }
-
-    .chat-container::-webkit-scrollbar-thumb {
-        background-color: var(--scrollbar-thumb);
-        border-radius: 10px;
-    }
-
-    .message-bubble {
-        background: var(--bubble);
-        padding: 14px 18px;
-        border-radius: 12px;
-        max-width: 90%;
-        line-height: 1.6;
-        word-wrap: break-word;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        animation: fadeIn 0.3s ease-in-out;
-    }
-
-    .fade-in {
-        opacity: 0;
-        animation: fadeIn 0.4s ease forwards;
-    }
-
-    @keyframes fadeIn {
-        to {
-            opacity: 1;
-        }
-    }
-
-    .input-container {
-        display: flex;
-        padding: 16px 20px;
-        gap: 10px;
-        border-top: 1px solid var(--border);
-        background: var(--bg);
-    }
-
-    .input-container textarea {
-        flex: 1;
-        resize: none;
-        background: var(--bubble);
-        border: 1px solid var(--border);
-        border-radius: 8px;
-        padding: 10px 14px;
-        color: var(--text);
-        font-size: 15px;
-        height: 48px;
-        line-height: 20px;
-        overflow-y: auto;
-        font-family: inherit;
-    }
-
-    .input-container button {
-        background: var(--accent);
-        border: none;
-        padding: 10px;
-        border-radius: 8px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        transition: background 0.2s;
-    }
-
-    .input-container button:hover {
-        background: #0e8c6c;
-    }
-</style>
 </body>
+</html>
